Print full reviewer name

--- a/source/fefu_style_imct.dtx
+++ b/source/fefu_style_imct.dtx
@@ -90,7 +90,7 @@
             && \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUconsultant}{\@FEFUcolumnwidth}\\
             && \@FEFUdate{\@FEFUcolumnwidth}\\ &&\\
             && \@FEFUmultilinepostfield[уч. степень, уч. звание]{Назначен рецензент }{\@FEFUreviewertitle}{\@FEFUcolumnwidth}\\
-            && \@FEFUfield[фамилия, имя, отчество]{\@FEFUshortname{\@FEFUreviewer}}{\@FEFUcolumnwidth}\\
+            && \@FEFUfield[фамилия, имя, отчество]{\@FEFUreviewer}{\@FEFUcolumnwidth}\\
             &&\\ &&\\ &&\\
             Защищена в ГЭК с оценкой && \textbf{\@FEFUaddguillemots{Допустить к защите}}\\
             \@FEFUfield{}{0.75\@FEFUcolumnwidth} && \multirow{3}{\@FEFUcolumnwidth}{\@FEFUdeputyjobtitle\ \@FEFUdepartmentreferencetitle\ \@FEFUdepartment,\ \@FEFUdeputytitle}\\ &&\\
