Add dates to backside

--- a/source/fefu_base.dtx
+++ b/source/fefu_base.dtx
@@ -83,6 +83,7 @@
 \newcommand{\@FEFUdepartment}{}
 \newcommand{\@FEFUdepartmenttitle}{}
 \newcommand{\@FEFUdepartmentreferencetitle}{}
+\newcommand{\@FEFUadmissiondate}{}
 %    \end{macrocode}
 % \begin{macro}{\setschool}
 % \begin{macro}{\setgroup}
@@ -92,6 +93,7 @@
 % \begin{macro}{\setfaculty}
 % \begin{macro}{\setprogram}
 % \begin{macro}{\setfeedback}
+% \begin{macro}{\setconsultant}
 % \begin{macro}{\setconsultant}
 % Sets respective internal variable
 %    \begin{macrocode}
@@ -109,7 +111,9 @@
 \newcommand{\setconsultant}[1]{\renewcommand{\@FEFUconsultant}{#1}}
 \newcommand{\setschooltitle}[1]{\renewcommand{\@FEFUschooltitle}{#1}}
 \newcommand{\setschoolreferencetitle}[1]{\renewcommand{\@FEFUschoolreferencetitle}{#1}}
+\newcommand{\setadmissiondate}[1]{\renewcommand{\@FEFUadmissiondate}{#1}}
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
