--- a/source/fefu_style_imct.dtx
+++ b/source/fefu_style_imct.dtx
@@ -82,13 +82,13 @@
         \noindent\begin{tabular}{p{\@FEFUcolumnwidth}p{.03\textwidth}p{\@FEFUcolumnwidth}}
             \multirow{4}{\@FEFUcolumnwidth}{\setstretch{1}В материалах данной выпускной квалификационной работы не\\ содержатся сведения, составляющие\\ государственную тайну, и сведения,\\ подлежащие экспортному контролю} && \@FEFUpostfield[подпись]{Автор работы }{}{0.9\@FEFUcolumnwidth}\\
             && Группа \@FEFUgroup\\
-            && \@FEFUdate{\@FEFUcolumnwidth}\\ &&\\ &&\\
+            && \@FEFUdate[\@date]{\@FEFUcolumnwidth}\\ &&\\ &&\\
             Уполномоченый по экспортному контролю && \@FEFUmultilinepostfield[{\tiny должность, уч. степень, уч. звание}]{Руководитель ВКР }{\@FEFUsupervisortitle}{\@FEFUcolumnwidth}\\
             \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUexportsupervisor}{\@FEFUcolumnwidth} && \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUsupervisor}{\@FEFUcolumnwidth}\\
-            \@FEFUdate{\@FEFUcolumnwidth} && \@FEFUdate{\@FEFUcolumnwidth}\\ && \\
+            \@FEFUdate[\@date]{\@FEFUcolumnwidth} && \@FEFUdate[\@date]{\@FEFUcolumnwidth}\\ && \\
             && Консультант\\
             && \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUconsultant}{\@FEFUcolumnwidth}\\
-            && \@FEFUdate{\@FEFUcolumnwidth}\\ &&\\
+            && \@FEFUdate[\@date]{\@FEFUcolumnwidth}\\ &&\\
             && \@FEFUmultilinepostfield[уч. степень, уч. звание]{Назначен рецензент }{\@FEFUreviewertitle}{\@FEFUcolumnwidth}\\
             && \@FEFUfield[фамилия, имя, отчество]{\@FEFUreviewer}{\@FEFUcolumnwidth}\\
             &&\\ &&\\ &&\\
@@ -96,7 +96,7 @@
             \@FEFUfield{}{0.75\@FEFUcolumnwidth} && \multirow{3}{\@FEFUcolumnwidth}{\@FEFUdeputyjobtitle\ \@FEFUdepartmentreferencetitle\ \@FEFUdepartment,\ \@FEFUdeputytitle}\\ &&\\
             Секретарь ГЭК &&\\
             \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUsecretary}{\@FEFUcolumnwidth} && \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUdeputy}{\@FEFUcolumnwidth}\\
-            \@FEFUdate{\@FEFUcolumnwidth} && \@FEFUdate{\@FEFUcolumnwidth}\\
+            \@FEFUdate[\@date]{\@FEFUcolumnwidth} && \@FEFUdate[\@FEFUadmissiondate]{\@FEFUcolumnwidth}\\
         \end{tabular}\\
         % {\setstretch{1}%
         %     В материалах данной выпускной квалификационной работы не содержатся сведения, составляющие государственную тайну, и сведения, подлежащие экспортному контролю.\\\par
